--- a/style.css
+++ b/style.css
@@ -27,15 +27,14 @@ select{
 }
 #container div:first-child{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(3,1fr);
     padding: 10px;
     gap:10px;
     grid-column: span 4;
 }
 a{
     text-decoration: none;
-    border: 2px solid;
-    border-radius: 1em;
+    color: #111;
 }
 h3{
     width: 90%;
@@ -59,4 +58,11 @@ button{
     border: 2px solid;
     background-color: white;
     border-radius: 5em;
+}
+button:active{
+    background-color: black;
+    color: white;
+}
+#list{
+    grid-column: span 4;
 }
